--- a/IngresoPedidos/App.xaml
+++ b/IngresoPedidos/App.xaml
@@ -4,6 +4,13 @@
              xmlns:local="clr-namespace:IngresoPedidos"
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
-         
+        <Style TargetType="Hyperlink" x:Key="FieldHyperlink">
+            <!--<Setter Property="Foreground" Value="DarkGreen"/>-->
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding IsSelected, RelativeSource= {RelativeSource AncestorType={x:Type DataGridRow}}}" Value="True">
+                    <Setter Property="Foreground" Value="White" />
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
     </Application.Resources>
 </Application>
