--- a/IngresoPedidos/Views/MainWindow.xaml
+++ b/IngresoPedidos/Views/MainWindow.xaml
@@ -4,33 +4,37 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewModels="clr-namespace:IngresoPedidos.ViewModels"
+        xmlns:autoScroll="clr-namespace:AutoScrollBehavior"
         mc:Ignorable="d"
         Title="Ingreso de Pedidos" Height="640" Width="800" WindowStartupLocation="CenterScreen" WindowState="Maximized">
     <Window.Resources>
         <viewModels:MainViewModel x:Key="ViewModel" />
     </Window.Resources>
 
+
     <Grid DataContext="{Binding Source={StaticResource ViewModel}}">
         <!---->
-        <Label Content="Numero de Pedido" HorizontalAlignment="Left" Margin="10,37,0,0" VerticalAlignment="Top" Height="23" Width="105" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-        <TextBox HorizontalAlignment="Left" Text="{Binding SelectedPedidoView.NumeroPedido}" Height="23" Margin="120,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontWeight="Bold" TabIndex="1" FontSize="14"/>
-        <Label Content="Articulo" HorizontalAlignment="Left" Margin="10,65,0,0" VerticalAlignment="Top" Height="23" Width="105" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-        <TextBox HorizontalAlignment="Left" Text="{Binding SelectedPedidoView.Articulo}" Height="23" Margin="120,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" TabIndex="2"/>
-        <Label Content="Modelo" HorizontalAlignment="Left" Margin="10,94,0,0" VerticalAlignment="Top" Height="22" Width="105" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-        <ComboBox HorizontalAlignment="Left" ItemsSource="{Binding ModelosList}" SelectedItem="{Binding SelectedPedidoView.NombreModelo, Mode=OneWay}" Margin="120,94,0,0" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="6,3,5,3" TabIndex="3"/>
-        <Label Content="Producto" HorizontalAlignment="Left" Margin="10,121,0,0" VerticalAlignment="Top" Height="22" Width="105" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-        <ComboBox HorizontalAlignment="Left" ItemsSource="{Binding ProductosList}" SelectedItem="{Binding SelectedPedidoView.NombreProducto, Mode=OneWay}" Margin="120,121,0,0" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="6,3,5,3" TabIndex="4"/>
-        <Label Content="Cantidad" HorizontalAlignment="Left" Margin="10,149,0,0" VerticalAlignment="Top" Height="23" Width="105" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-        <TextBox HorizontalAlignment="Left" Text="{Binding SelectedPedidoView.CantidadEquipos}" Height="23" Margin="120,148,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" TabIndex="5"/>
-        <Label Content="Numero Original" HorizontalAlignment="Left" Margin="10,177,0,0" VerticalAlignment="Top" Height="23" Padding="0" HorizontalContentAlignment="Center" Width="105" VerticalContentAlignment="Center"/>
-        <TextBox HorizontalAlignment="Left" Text="{Binding SelectedPedidoView.NumeroReproceso}" Height="23" Margin="120,176,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" TabIndex="6"/>
-        <Label Content="Estado" HorizontalAlignment="Left" Margin="10,205,0,0" VerticalAlignment="Top" Height="22" Width="105" Padding="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-        <ComboBox HorizontalAlignment="Left" ItemsSource="{Binding EstadosList}" SelectedItem="{Binding SelectedPedidoView.EstadoPedido, Mode=OneWay}" Margin="120,204,0,0" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="6,3,5,3" TabIndex="7"/>
-        <CheckBox Content="Agregar comentario a la accion" HorizontalAlignment="Left" Margin="10,242,0,0" VerticalAlignment="Top" TabIndex="9"/>
-        <TextBox HorizontalAlignment="Left" Height="72" Margin="10,262,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="244" MaxLength="120" MaxLines="2" TabIndex="10" IsEnabled="False"/>
+        <Label Content="Numero de Pedido" HorizontalAlignment="Left" Margin="10,38,0,0" VerticalAlignment="Top" Height="23" Width="105" Padding="0" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" FontFamily="Consolas"/>
+        <TextBox HorizontalAlignment="Left" Text="{Binding SelectedPedidoView.NumeroPedido}" Height="23" Margin="120,38,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" FontWeight="Bold" TabIndex="1" FontSize="14" FontFamily="Consolas"/>
+        <Label Content="Articulo" HorizontalAlignment="Left" Margin="10,66,0,0" VerticalAlignment="Top" Height="23" Width="105" Padding="0" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" FontFamily="Consolas"/>
+        <TextBox HorizontalAlignment="Left" Text="{Binding SelectedPedidoView.Articulo}" Height="23" Margin="120,66,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" TabIndex="2" FontFamily="Consolas"/>
+        <Label Content="Modelo" HorizontalAlignment="Left" Margin="10,95,0,0" VerticalAlignment="Top" Height="22" Width="105" Padding="0" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" FontFamily="Consolas"/>
+        <ComboBox HorizontalAlignment="Left" ItemsSource="{Binding ModelosList}" SelectedItem="{Binding SelectedPedidoView.NombreModelo, Mode=OneWay}" Margin="120,94,0,0" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" Padding="6,3,5,3" TabIndex="3" FontFamily="Consolas" Height="23"/>
+        <Label Content="Producto" HorizontalAlignment="Left" Margin="10,122,0,0" VerticalAlignment="Top" Height="22" Width="105" Padding="0" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" FontFamily="Consolas"/>
+        <ComboBox HorizontalAlignment="Left" ItemsSource="{Binding ProductosList}" SelectedItem="{Binding SelectedPedidoView.NombreProducto, Mode=OneWay}" Margin="120,122,0,0" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" Padding="6,3,5,3" TabIndex="4" FontFamily="Consolas" Height="22"/>
+        <Label Content="Cantidad" HorizontalAlignment="Left" Margin="10,150,0,0" VerticalAlignment="Top" Height="23" Width="105" Padding="0" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" FontFamily="Consolas"/>
+        <TextBox HorizontalAlignment="Left" Text="{Binding SelectedPedidoView.CantidadEquipos}" Height="23" Margin="120,149,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" TabIndex="5" FontFamily="Consolas"/>
+        <Label Content="Numero Original" HorizontalAlignment="Left" Margin="10,178,0,0" VerticalAlignment="Top" Height="23" Padding="0" HorizontalContentAlignment="Right" Width="105" VerticalContentAlignment="Center" FontFamily="Consolas"/>
+        <TextBox HorizontalAlignment="Left" Text="{Binding SelectedPedidoView.NumeroReproceso}" Height="23" Margin="120,177,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" TabIndex="6" FontFamily="Consolas"/>
+        <Label Content="Estado" HorizontalAlignment="Left" Margin="10,206,0,0" VerticalAlignment="Top" Height="22" Width="105" Padding="0" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" FontFamily="Consolas"/>
+        <ComboBox HorizontalAlignment="Left" ItemsSource="{Binding EstadosList}" SelectedItem="{Binding SelectedPedidoView.EstadoPedido, Mode=OneWay}" Margin="120,205,0,0" VerticalAlignment="Top" Width="145" VerticalContentAlignment="Center" Padding="6,3,5,3" TabIndex="7" FontFamily="Consolas" Height="23"/>
+        <CheckBox Content="Agregar comentario" HorizontalAlignment="Left" Margin="10,243,0,0" VerticalAlignment="Top" TabIndex="9" FontFamily="Consolas"/>
+        <TextBox HorizontalAlignment="Left" Height="72" Margin="10,263,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="255" MaxLength="120" MaxLines="2" TabIndex="10" IsEnabled="False" FontFamily="Consolas"/>
         <!---->
-        <Label Content="-425- SCHNEIDER NICOLAS" Margin="270,10,160,0" VerticalAlignment="Top" Padding="5,0,5,1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="22" BorderBrush="#FF707070" BorderThickness="1" FontSize="10" Background="{DynamicResource {x:Static SystemColors.GradientInactiveCaptionBrushKey}}"/>
-        <DataGrid Name="DataGridPedidos" ItemsSource="{Binding PedidosViewList}" SelectedItem="{Binding SelectedPedidoView}" EnableColumnVirtualization="True" CanUserAddRows="False" CanUserDeleteRows="False" CanUserReorderColumns="False" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserSortColumns="False" Margin="270,37,10,10" ColumnWidth="*" AutoGenerateColumns="False" IsReadOnly="True" SelectionMode="Single" EnableRowVirtualization="True" FontFamily="Consolas" FontWeight="Bold" FontSize="14">
+        <Label Content="-425- SCHNEIDER NICOLAS" Margin="270,10,145,0" Padding="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="#FF707070" BorderThickness="1" Background="{DynamicResource {x:Static SystemColors.GradientInactiveCaptionBrushKey}}" FontFamily="Consolas" Height="22" VerticalAlignment="Top"/>
+        <DataGrid Name="DataGridPedidos" SelectedIndex="{Binding DataGridSelectedIndex}" SelectionChanged="DataGridPedidos_SelectionChanged" ItemsSource="{Binding PedidosViewList}" SelectedItem="{Binding SelectedPedidoView, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" IsSynchronizedWithCurrentItem="True" EnableColumnVirtualization="True" CanUserAddRows="False" CanUserDeleteRows="False" CanUserReorderColumns="False" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserSortColumns="False" Margin="270,38,10,10" ColumnWidth="*" AutoGenerateColumns="False" IsReadOnly="True" SelectionMode="Single" EnableRowVirtualization="True" FontFamily="Consolas" FontWeight="Bold" FontSize="14">
+            <!--<DataGrid Name="DataGridPedidos" autoScroll:AutoScrollBehavior.AutoScroll="True" ItemsSource="{Binding PedidosViewList}" SelectedItem="{Binding SelectedPedidoView, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" IsSynchronizedWithCurrentItem="True" SelectionChanged="DataGridPedidos_SelectionChanged" EnableColumnVirtualization="True" CanUserAddRows="False" CanUserDeleteRows="False" CanUserReorderColumns="False" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserSortColumns="False" Margin="270,37,10,10" ColumnWidth="*" AutoGenerateColumns="False" IsReadOnly="True" SelectionMode="Single" EnableRowVirtualization="True" FontFamily="Consolas" FontWeight="Bold" FontSize="14">-->
+
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Pedido" Binding="{Binding NumeroPedido}" />
                 <DataGridTextColumn Header="Modelo" Binding="{Binding NombreModelo}"/>
@@ -40,21 +44,43 @@
                 <DataGridTextColumn Header="Ingreso a Sistema" Binding="{Binding FechaIngreso}"/>
                 <DataGridTextColumn Header="Estado" Binding="{Binding EstadoPedido}"/>
                 <DataGridTextColumn Header="Fecha Estado" Binding="{Binding FechaEstado}"/>
-                <DataGridTextColumn Header="Reproceso" Binding="{Binding NumeroReproceso}"/>
+                <DataGridTemplateColumn Header="Reproceso">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <TextBlock>
+                                <Hyperlink Style="{StaticResource FieldHyperlink}" Command="{Binding SelectReprocesoCommand, Source={StaticResource ViewModel}}" CommandParameter="{Binding NumeroReproceso}">
+                                    <TextBlock Text="{Binding NumeroReproceso}" />
+                                </Hyperlink>
+                            </TextBlock>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTemplateColumn Header="Original">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <TextBlock>
+                                <Hyperlink Style="{StaticResource FieldHyperlink}" Command="{Binding SelectOriginalCommand, Source={StaticResource ViewModel}}" CommandParameter="{Binding NumeroOriginal}">
+                                    <TextBlock Text="{Binding NumeroOriginal}" />
+                                </Hyperlink>
+                            </TextBlock>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <ComboBox Margin="0,10,10,0" ItemsSource="{Binding FiltrosList}" SelectedItem="{Binding SelectedFiltro}" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="6,3,5,3" HorizontalAlignment="Right" Width="145" TabIndex="14"/>
+
+        <ComboBox Margin="0,10,10,0" ItemsSource="{Binding FiltrosList}" SelectedIndex="0" SelectedItem="{Binding SelectedFiltro}" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="6,3,5,3" TabIndex="14" FontFamily="Consolas" Height="22" HorizontalAlignment="Right" Width="130"/>
         <!---->
-        <Button Content="GUARDAR" HorizontalAlignment="Left" Margin="10,339,0,0" Width="244" Height="22" VerticalAlignment="Top" TabIndex="11"/>
-        <Button Content="NUEVO" Command="{Binding RefreshDataCommand}" HorizontalAlignment="Left" Margin="10,366,0,0" Width="244" Height="22" VerticalAlignment="Top" TabIndex="11"/>
+        <Button Content="GUARDAR" HorizontalAlignment="Left" Margin="10,340,0,0" Width="255" Height="22" VerticalAlignment="Top" TabIndex="11" FontFamily="Consolas"/>
+        <Button Content="NUEVO" Command="{Binding RefreshDataCommand}" HorizontalAlignment="Left" Margin="10,367,0,0" Width="255" Height="22" VerticalAlignment="Top" TabIndex="11" FontFamily="Consolas"/>
     <DockPanel Height="22" VerticalAlignment="Top" HorizontalAlignment="Left" Width="255" Margin="10,10,0,0">
-        <Menu DockPanel.Dock="Top" BorderBrush="#FF707070" BorderThickness="1">
-            <MenuItem Header="Pedido" >
+        <Menu DockPanel.Dock="Top" BorderBrush="#FF707070" BorderThickness="1" FontFamily="Consolas" Padding="2,2,0,0">
+            <MenuItem Header="Pedido" FontFamily="Consolas" >
                 <MenuItem Header="Buscar" />
                 <MenuItem Header="Ver Movimientos" />
                 <MenuItem Header="Generar Recibo" />
             </MenuItem>
-            <MenuItem Header="Usuario">
+            <MenuItem Header="Usuario" FontFamily="Consolas">
                 <MenuItem Header="Cerrar Sesion" />
                 <MenuItem Header="Cambiar Contraseña" />
             </MenuItem>
